--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <style>
 
-    .heading{
+    #heading{
       text-align: center;
       margin-top: 3%;
     }
@@ -41,10 +41,10 @@
       }
     </style>
 
-    <h2 class="heading">I am incomplete without you!</h2>
+    <h2 id="heading">I am incomplete without you!</h2>
     
     <div id="suggestion-container">
-        <div id="suggestion" style="color: rgba(0, 0, 0, 0.2);">This is the Suggestion with low opacity</div>
+        <div id="suggestion" style="color: rgba(0, 0, 0, 0.2);"></div>
         <!-- 
           Overlay - must be placed under `suggestion` in the HTML (inside same container) 
           Note: It is on top of `content`
@@ -54,10 +54,12 @@
 
     <script src="index.js">
       /*
-      Add event listeners to conteneditable and
+      1. Add event listeners to conteneditable and
         - copy from `input` textContent
         - get suggestion and call it `suggest`.
         - rewrite textContent of `suggestion` with `inputVal` + `suggest` 
+      2. Add debounce so that you dont do it much often
+      3. Add eventlistener to replace input with sugesstion on r-click
       */
     </script>
 
